Closed Bug 50689 Opened 24 years ago Closed 24 years ago

Chrome not registered (Mail and chat not on task list)

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P1)

PowerPC
Mac System 9.x
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: tracy, Assigned: dveditz)

References

Details

(Keywords: smoketest, Whiteboard: [dogfood+])

Mac build 2000-08-29-08-m18

not able to open mail or AIM  for smoketests

did typical install....will try custom istall to see if that might produce a 
workaround.
Putting on dogfood+ radar.
Keywords: smoketest
Whiteboard: [dogfood+]
custom install did not make any difference.
I have this too on aug 29 build OS 9. And the task bar is missing the Mail icon 
and when I launch mail only from my desktop it starts the browser. And, there 
were no entries for them in the preferences Dialog. Really looks like Mail and 
AIM didn't install. (I tried Custom Install too same thing)
asa is the wrong owner for this.  Need to get this to the right owner.

Tracy - are you able to start mail with a -mail parameter (or equivalent on the
Mac)?
not sure who gets this...trying a few folks.
Assignee: asa → ben
QA Contact: doronr → lchiang
yes, am able to test mail that way...cool.

discovered bug 50707.  but mac mail seems to works fine otherwise.
sounds like overlays aren't getting loaded properly for aim and mail? 
works on WinNT/mozilla.  would be useful to know if this is
Argh. Mine.
Assignee: ben → hyatt
fixed.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Strange... I used the netscape6-mac.sea.bin on Mac (2000-08-29-08 m18)build, I 
am able to to select Task->Mail. 
Tracy - please verify this in the next builds. Thanks!
I am still seeing this on mac comm. build 2000-08-30-04-m18

reopening
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
the 8am mac builds just finished, you may want to check this against them as well.
This is not a blocker since you can access mail from your install directory 
Messenger Icon.
still seeing on mac 2000-08-30-08-m18

I know the workaround for mail....what about for AIM?
commercial only
Summary: Mail and AIM not on task list → Commercial-only: Mail and AIM not on task list
Try "-aim" parameter.  
workaround for AIM found....it appears these files were loaded fine.

they just aren't listed in the task menu.
Smoketests do not specify that you must start Mail (and presumably AIM?) from 
the Tasks list.  Still a smoketest blocker?
Keywords: nsonly
reducing to critical....workarounds are available but not at all convenient from 
a user stand point
Severity: blocker → critical
Not related to my checkin then.  Must be installer-related.  Reassigning to 
dprice. cc'ing dveditz.

Assignee: hyatt → dprice
Status: REOPENED → NEW
I am seeing this on Mozilla typical install also (2000083008M18)
we haven't enabled jar packaging on mac yet.  It is still using the flat file 
system.  This isn't mine but I don't know who to give it to.
I'll take this, I guess. Ben wrote in bug 46013

> "Some investigation led me to believe that it was the file URLs in the 
> installed-chrome.txt file that were causing the heartache.

If that is indeed the problem I already have bug 48155 to fix that. But file: 
URLs *used* to work for chrome, still *do* work on the other platforms, and 
unless I'm told otherwise *should* work. (but do need to be changed to solve 
bug 48155).
Component: Browser-General → Installer
*** Bug 50773 has been marked as a duplicate of this bug. ***
Not commercial only (apart from the AIM bit, of course). I found this with the 
MozMacInstaller.sea.bin on:
* 2000082608 nightly build, Mac OS 9.0
* 2000082920 nightly build, Mac OS 9.0.
Keywords: nsonly
Summary: Commercial-only: Mail and AIM not on task list → Mail and AIM not on task list
Forgot to reassign
Assignee: dprice → dveditz
Component: Installer → Installer: XPInstall Engine
Summary: Mail and AIM not on task list → Chrome not registered (Mail and chat not on task list)
*** Bug 50669 has been marked as a duplicate of this bug. ***
Priority: P3 → P1
*** Bug 50669 has been marked as a duplicate of this bug. ***
changing this to smoketest blocker because the workarounds are no longer 
functioning either. Can not test AIM or Mail.

mac commercial build: 2000-09-06-04-M18
Severity: critical → blocker
lowering severity since workaround does work for twaler.
Severity: blocker → critical
*** Bug 51535 has been marked as a duplicate of this bug. ***
After poking around empirically, Dan and I found that the file URLs were 
missing a preceding slash, i.e., incorrectly logged file://HD/... instead of 
file:///HD/...  The hacknsIFile2URL() function added when landing jar: support 
appears to be the culprit:
http://lxr.mozilla.org/seamonkey/source/xpinstall/src/nsRegisterItem.cpp#102
Fix checked in. This was broken when warren made changes to land jar packaging 
on windows -- he switched all platforms to using file:// URLs and the Mac is 
pickier than others about the syntax.

Note that bug 48155 describes a deeper problem with using file:// URLs at all, 
but at least this gets QA going until that's fixed.
Status: NEW → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
marking verified fixed

mac commercial build 2000-09-07-04-M18
Status: RESOLVED → VERIFIED
http://bugzilla.mozilla.org/show_bug.cgi?id=52305

sounds like a dupe of this, but it shore as heck ain't fixed! I've been seeing it 
with builds from 9/11 and 9/12
OS: Mac System 9.x
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.