dogfood bug 50689 (no chrome registration on Mac)